--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,8 +1,13 @@
-header {
+.header {
+    position: relative;
+    right: 0;
+    top: 0;;
     width: 100%;
     height: 80px;
-    background-color: #6cc72c;
-    text-align: center;
+    background-color: #fff;
+    box-sizing: border-box;
+    z-index: 20;
+    box-shadow: 0 6px 4px 0 rgba(0,0,0,.25);
 
     h1 {
         margin: 0;
@@ -10,6 +15,6 @@ header {
         font-size: 32px;
         padding-top: 20px;
         font-weight: 400;
-        color: #fff;
+        color: #595959;
     }
 }
