--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -17,4 +17,11 @@
         font-weight: 400;
         color: #595959;
     }
+
+    button {
+        margin: 0;
+        padding-top: 20px;
+        width: 80px;
+        height: 80px;
+    }
 }
